--- a/index.html
+++ b/index.html
@@ -5,6 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Colmar Academy</title>
+    <link rel="stylesheet" href="/assets/css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1 id="schoolname">
+        <span id="dark">COLMAR</span><span id="light">ACADEMY</span>
+      </h1>
+      <nav>
+        <ul>
+          <li><a href="#">Sign in</a></li>
+          <li><a href="#">For companies</a></li>
+          <li><a href="#">Online</a></li>
+          <li><a href="#">On campus</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <div class="flex">
+        <img
+          class="banner"
+          src="assets/images/banner.jpg"
+          alt="students studying"
+        />
+        <div class="rightbox">
+          <div class="textbox">
+            <h1>Learn something <br />new everyday</h1>
+            <h3>Lorem ipsum dolor sit amet,</h3>
+            <button>Start here</button>
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer></footer>
+  </body>
 </html>
