--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="/assets/css/style.css" />
   </head>
   <body>
-    <header>
+    <header class="flex">
       <h1 id="schoolname">
-        <span id="dark">COLMAR</span><span id="light">ACADEMY</span>
+        <img src="assets/images/ic-logo.svg" /> <span id="dark">COLMAR</span
+        ><span id="light">ACADEMY</span>
       </h1>
       <nav>
         <ul>
@@ -22,20 +23,113 @@
       </nav>
     </header>
     <main>
-      <div class="flex">
-        <img
-          class="banner"
-          src="assets/images/banner.jpg"
-          alt="students studying"
-        />
+      <section class="banner-box flex">
+        <div class="large-image-box">
+          <img src="assets/images/banner.jpg" alt="students studying" />
+        </div>
+
         <div class="rightbox">
           <div class="textbox">
             <h1>Learn something <br />new everyday</h1>
-            <h3>Lorem ipsum dolor sit amet,</h3>
+            <h3>
+              Lorem ipsum dolor sit amet, <br />consectetur adipiscing elit.
+            </h3>
             <button>Start here</button>
           </div>
         </div>
-      </div>
+      </section>
+      <section class="flex section2">
+        <div class="large-image-box">
+          <img src="./assets/images/information-main.jpg" />
+          <div>
+            <h2 class="info-heading">It doesn't hurt to keep practicing</h2>
+            <p>
+              "Curabitur vitae libero ini ipsum porttitor consequat. Aliquam et
+              commodo lectus, nec consequat neque. Sed non accumsan urna.
+              Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur
+              dolor consequat, tristique ligula."
+            </p>
+            <p>Emanuall, Sr Strategist at Hiring.com</p>
+          </div>
+        </div>
+        <div class="rightbox">
+          <div class="smallbox flex">
+            <img
+              src="/assets/images/information-orientation.jpg"
+              class="smallbox-image"
+            />
+            <div class="textright">
+              <h4>Orientation date</h4>
+              <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+              <a href="#">Read More</a>
+            </div>
+          </div>
+          <div class="smallbox flex">
+            <img
+              src="assets/images/information-campus.jpg"
+              class="smallbox-image"
+            />
+            <div class="textright">
+              <h4>Our campus</h4>
+              <p>Find which campus is close by you</p>
+              <a href="#">Read More</a>
+            </div>
+          </div>
+          <div class="smallbox flex">
+            <img
+              src="assets/images/information-guest-lecture.jpg"
+              class="smallbox-image"
+            />
+            <div class="textright">
+              <h4>Our guest lecture</h4>
+              <p>
+                Join a keynote with Oliver Sack about music in medical treatment
+              </p>
+              <a href="#">Read More</a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section3">
+        <h2 class="section-header info-heading">Start Learning</h2>
+        <div class="flex">
+          <div class="smallbox-vertical thirdflexbox">
+            <img src="assets/images/course-software.jpg" />
+            <h4>Software engineering</h4>
+            <p>COURSES</p>
+            <p>Web Development, Mobile Development, iOT, APIs</p>
+          </div>
+          <div class="smallbox-vertical thirdflexbox">
+            <img src="assets/images/course-computer-art.jpg" />
+            <h4>Computer Art</h4>
+            <p>COURSES</p>
+            <p>
+              Imaging & Design, Web Design, Motion Graphics & Visual Effects,
+              Computer Animation
+            </p>
+          </div>
+          <div class="smallbox-vertical thirdflexbox">
+            <img src="#" />
+            <h4></h4>
+            <p></p>
+          </div>
+          <div class="smallbox-vertical thirdflexbox">
+            <img src="#" />
+            <h4></h4>
+            <p></p>
+          </div>
+          <div class="smallbox-vertical thirdflexbox">
+            <img src="#" />
+            <h4></h4>
+            <p></p>
+          </div>
+          <div class="smallbox-vertical thirdflexbox">
+            <img src="#" />
+            <h4></h4>
+            <p></p>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
