website version finished

--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
           </div>
         </div>
       </section>
-      <section class="section3">
+      <section class="gray">
         <h2 class="section-header info-heading">Start Learning</h2>
-        <div class="flex">
+        <div class="section3flex">
           <div class="smallbox-vertical thirdflexbox">
             <img src="assets/images/course-software.jpg" />
             <h4>Software engineering</h4>
@@ -109,28 +109,74 @@
             </p>
           </div>
           <div class="smallbox-vertical thirdflexbox">
-            <img src="#" />
-            <h4></h4>
-            <p></p>
+            <img src="assets/images/course-design.jpg" />
+            <h4>Design</h4>
+            <p>COURSES</p>
+            <p>User Experience Design, User Research, Visual Design</p>
           </div>
           <div class="smallbox-vertical thirdflexbox">
-            <img src="#" />
-            <h4></h4>
-            <p></p>
+            <img src="assets/images/course-data.jpg" />
+            <h4>Data</h4>
+            <p>COURSES</p>
+            <p>Data Science, Big Data, SQL, Data Visualization</p>
           </div>
           <div class="smallbox-vertical thirdflexbox">
-            <img src="#" />
-            <h4></h4>
-            <p></p>
+            <img src="assets/images/course-business.jpg" />
+            <h4>Business</h4>
+            <p>COURSES</p>
+            <p>Product Development, Business Development, Startup</p>
           </div>
           <div class="smallbox-vertical thirdflexbox">
-            <img src="#" />
-            <h4></h4>
-            <p></p>
+            <img src="assets/images/course-marketing.jpg" />
+            <h4>Marketing</h4>
+            <p>COURSES</p>
+            <p>Analytics, Content Marketing, Mobile Marketing</p>
           </div>
         </div>
       </section>
+      <section>
+        <h2 class="section-header info-heading">Thesis Exhibit</h2>
+        <div class="flex">
+          <div class="large-image-box">
+          <img src="assets/images/information-main.jpg" class="gray"/>
+          <div>
+            <p class="graywords">
+              "Curabitur vitae libero ini ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."
+            </p>
+          </div>
+        </div>
+        <div class="rightbox graywords">
+          <div class="smallbox flex gray">
+            <img
+              src="assets/images/thesis-fisma.jpg"
+              class="smallbox-image"
+            />
+            <div class="textright">
+              <h4>Fisma: Design and Prototype</h4>
+              <p>Designer showcase of new prototype product</p>
+            </div>
+          </div>
+          <div class="smallbox flex">
+            <img
+              src="assets/images/thesis-now-and-then.jpg"
+              class="smallbox-image"
+            />
+            <div class="textright">
+              <h4>Now and then</h4>
+              <p>Research study about New York</p>
+            </div>
+        </div>
+      </section>
     </main>
-    <footer></footer>
+    <footer class="graywords flex">
+      <span>&copy Colmar Academy. All rights reserved </span>
+  
+      <nav>
+        <ul>
+          <li><p>Terms</p></li>
+          <li><p>Privacy</p></li>
+        </ul>
+      </nav>
+    </footer>
   </body>
 </html>
