--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
         <img src="assets/images/ic-logo.svg" /> <span id="dark">COLMAR</span
         ><span id="light">ACADEMY</span>
       </h1>
+      <div class="mobile">
+        <img src="assets/images/ic-logo.svg" />
+      </div>
+      <div class="mobile"><img src="assets/images/ic-on-campus.svg"
+        /></div>
+      <div class="mobile"><img src="assets/images/ic-online.svg" /></div>
+      <div class="mobile"><img src="assets/images/ic-login.svg" /></div> 
+        
+      </h1>
       <nav>
         <ul>
           <li><a href="#">Sign in</a></li>
@@ -168,15 +177,16 @@
         </div>
       </section>
     </main>
-    <footer class="graywords flex">
-      <span>&copy Colmar Academy. All rights reserved </span>
+    <hr class="light">
+    <footer class="graywords flex">      
+      <h5>&copy Colmar Academy. All rights reserved </h5>
   
-      <nav>
+      <div class="footer-right">
         <ul>
-          <li><p>Terms</p></li>
           <li><p>Privacy</p></li>
+          <li><p>Terms</p></li>      
         </ul>
-      </nav>
+      </div>
     </footer>
   </body>
 </html>
