information section mobile

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
       </section>
       <section class="flex section2">
-        <div class="large-image-box">
+        <div class="large-image-box disappear">
           <img src="./assets/images/information-main.jpg" />
           <div>
             <h2 class="info-heading">It doesn't hurt to keep practicing</h2>
@@ -65,8 +65,10 @@
           <div class="smallbox flex">
             <img
               src="/assets/images/information-orientation.jpg"
-              class="smallbox-image"
+              class="smallbox-image disappear"
             />
+            <img
+              src="assets/images/information-orientation-mobile.jpg" class="mobile"/>
             <div class="textright">
               <h4>Orientation date</h4>
               <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
@@ -76,8 +78,9 @@
           <div class="smallbox flex">
             <img
               src="assets/images/information-campus.jpg"
-              class="smallbox-image"
+              class="smallbox-image disappear"
             />
+            <img src="assets/images/information-campus-mobile.jpg" class="mobile"/>
             <div class="textright">
               <h4>Our campus</h4>
               <p>Find which campus is close by you</p>
@@ -87,8 +90,9 @@
           <div class="smallbox flex">
             <img
               src="assets/images/information-guest-lecture.jpg"
-              class="smallbox-image"
+              class="smallbox-image disappear"
             />
+            <img src="assets/images/information-guest-lecture-mobile.jpg" class="mobile"/>
             <div class="textright">
               <h4>Our guest lecture</h4>
               <p>
