mobile @media queries

--- a/index.html
+++ b/index.html
@@ -106,13 +106,13 @@
       <section class="gray">
         <h2 class="section-header info-heading">Start Learning</h2>
         <div class="section3flex">
-          <div class="smallbox-vertical thirdflexbox">
+          <div class="thirdflexbox">
             <img src="assets/images/course-software.jpg" />
             <h4>Software engineering</h4>
             <p>COURSES</p>
             <p>Web Development, Mobile Development, iOT, APIs</p>
           </div>
-          <div class="smallbox-vertical thirdflexbox">
+          <div class="thirdflexbox">
             <img src="assets/images/course-computer-art.jpg" />
             <h4>Computer Art</h4>
             <p>COURSES</p>
@@ -121,7 +121,7 @@
               Computer Animation
             </p>
           </div>
-          <div class="smallbox-vertical thirdflexbox">
+          <div class="thirdflexbox">
             <img src="assets/images/course-design.jpg" />
             <h4>Design</h4>
             <p>COURSES</p>
@@ -148,17 +148,19 @@
         </div>
       </section>
       <section>
-        <h2 class="section-header info-heading">Thesis Exhibit</h2>
+        <h2 class="section-header info-heading">Thesis Exhibits</h2>
         <div class="flex">
           <div class="large-image-box">
-          <img src="assets/images/information-main.jpg" class="gray"/>
+          <!-- <img src="assets/images/information-main.jpg" class="gray"/> 
+          -->
+            <video src="assets/videos/thesis.mp4"></video>
           <div>
-            <p class="graywords">
+            <p class="graywords disappear">
               "Curabitur vitae libero ini ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."
             </p>
           </div>
         </div>
-        <div class="rightbox graywords">
+        <div class="rightbox graywords disappear">
           <div class="smallbox flex gray">
             <img
               src="assets/images/thesis-fisma.jpg"
@@ -181,11 +183,11 @@
         </div>
       </section>
     </main>
-    <hr class="light">
+    <hr class="light disappear">
     <footer class="graywords flex">      
-      <h5>&copy Colmar Academy. All rights reserved </h5>
+      <h5>&copy2016 Colmar Academy. All rights reserved </h5>
   
-      <div class="footer-right">
+      <div class="footer-right disappear">
         <ul>
           <li><p>Privacy</p></li>
           <li><p>Terms</p></li>      
